
  * New upstream production branch release 470.82.00 (2021-10-26).
    - Added support for the following GPUs: Matrox D-Series D2450,
      Matrox D-Series D2480, NVIDIA A2.
    - Fixed a bug that can cause a kernel crash in SLI Mosaic configurations.
    - Added support for the EGL_NV_robustness_video_memory_purge extension

  [ Andreas Beckmann ]
  * bug-script: Show the nvidia and glx alternatives.
  * nvidia-alternative: libnvidia-cfg.so.1 on its own is not
    sufficient to activate a nvidia alternative.  (Closes: #996595)
  * Fix bashisms in upstream scripts.
  * Drop the unusable leftover non-GLVND libegl1-nvidia package.
    (Closes: #996763)
  * nvidia-alternative: Drop unused non-GLVND slave links.
  * Restrict watch file to releases from the 470.xx production branch.
  * Update lintian overrides.

 -- Andreas Beckmann <anbe@debian.org>  Fri, 29 Oct 2021 15:37:03 +0200

nvidia-graphics-drivers (470.74-1) unstable; urgency=medium

  * New upstream production branch release 470.74 (2021-09-20).
    - Fixed a bug that could cause GPU applications to exit when resuming
      from suspend.
    - Fixed a regression which resulted in very-high system memory usage for
      Direct3D 12 games when run through vkd3d-proton.
    (Closes: #994942, #995271, #996031, #996164, #996468)
  * New upstream release 390 series.
    - Fixed a bug that caused nvidia-drm.ko to crash when loading with
      DRM-KMS enabled (modeset=1) on Linux v5.14.

  [ Andreas Beckmann ]
  * Update nv-readme.ids.
  * Update lintian overrides.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 12 Oct 2021 09:11:35 +0200

nvidia-graphics-drivers (470.63.01-1) unstable; urgency=medium

  * New upstream production branch release 470.63.01 (2021-08-10).
    - Added an application profile to disable FXAA for Firefox to prevent
      visual corruption.
    - Added support for the VK_KHR_wayland_surface extension.
    - Fixed a Vulkan performance regression that affected rFactor2.
    (Closes: #994633)
